--- a/index.html
+++ b/index.html
@@ -104,17 +104,38 @@
           <div class="form-search__row">
             <label class="form-search__label" for="date-arrival">Дата заезда:</label>
             <input class="form-search__text" id="date-arrival" type="text" placeholder="24 апреля 2017">
+            <button class="form-search__calendar" type="button">
+              <svg class="calendar" xmlns="http://www.w3.org/2000/svg" width="21" height="22">
+                <path d="M19.3 2h-2.9V.6c0-.3-.3-.6-.6-.6-.4 0-.7.3-.7.6V2h-4V.6c0-.3-.2-.6-.6-.6-.4 0-.7.3-.7.6V2H6V.6c0-.3-.3-.6-.7-.6-.3 0-.6.3-.6.6V2H1.8C.8 2 0 2.8 0 4v16.3c0 1 .8 1.8 1.8 1.8h17.5c1 0 1.7-.8 1.7-1.8V3.9c0-1-.8-1.9-1.7-1.9zm.4 18.2a.4.4 0 0 1-.4.4H1.7a.5.5 0 0 1-.4-.4V3.9a.5.5 0 0 1 .5-.5h2.8v1.4c0 .4.3.7.7.7.3 0 .6-.3.6-.7V3.4h4v1.4c0 .4.2.7.6.7.4 0 .7-.3.7-.7V3.4H15v1.4c0 .4.3.7.7.7.3 0 .6-.3.6-.7V3.4h2.9c.2 0 .4.2.4.5v16.3z"/><path d="M4.6 8.2h2.6v2H4.6zm0 3.5h2.6v2H4.6zm0 3.4h2.6v2H4.6zm4.6 0h2.6v2H9.2zm0-3.4h2.6v2H9.2zm0-3.5h2.6v2H9.2zm4.6 7h2.6v2h-2.6zm0-3.5h2.6v2h-2.6zm0-3.5h2.6v2h-2.6z"/>
+              </svg>
+            </button>
           </div>
+
           <div class="form-search__row">
             <label class="form-search__label" for="date-leave">Дата выезда:</label>
             <input class="form-search__text" id="date-leave" type="text" placeholder="4 июля 2017">
+            <button class="form-search__calendar" type="button">
+              <svg class="calendar" xmlns="http://www.w3.org/2000/svg" width="21" height="22">
+                <path d="M19.3 2h-2.9V.6c0-.3-.3-.6-.6-.6-.4 0-.7.3-.7.6V2h-4V.6c0-.3-.2-.6-.6-.6-.4 0-.7.3-.7.6V2H6V.6c0-.3-.3-.6-.7-.6-.3 0-.6.3-.6.6V2H1.8C.8 2 0 2.8 0 4v16.3c0 1 .8 1.8 1.8 1.8h17.5c1 0 1.7-.8 1.7-1.8V3.9c0-1-.8-1.9-1.7-1.9zm.4 18.2a.4.4 0 0 1-.4.4H1.7a.5.5 0 0 1-.4-.4V3.9a.5.5 0 0 1 .5-.5h2.8v1.4c0 .4.3.7.7.7.3 0 .6-.3.6-.7V3.4h4v1.4c0 .4.2.7.6.7.4 0 .7-.3.7-.7V3.4H15v1.4c0 .4.3.7.7.7.3 0 .6-.3.6-.7V3.4h2.9c.2 0 .4.2.4.5v16.3z"/><path d="M4.6 8.2h2.6v2H4.6zm0 3.5h2.6v2H4.6zm0 3.4h2.6v2H4.6zm4.6 0h2.6v2H9.2zm0-3.4h2.6v2H9.2zm0-3.5h2.6v2H9.2zm4.6 7h2.6v2h-2.6zm0-3.5h2.6v2h-2.6zm0-3.5h2.6v2h-2.6z"/>
+              </svg>
+            </button>
           </div>
+
           <div class="form-search__row">
-            <label class="form-search__label" for="adult-ticket">Взрослые:</label>
-            <input class="form-search__number" id="adult-ticket" type="number" placeholder="2">
-            <label class="form-search__label" for="children-ticket">Дети:</label>
-            <input class="form-search__number" id="children-ticket" type="number" placeholder="0">
+            <div class="form-search__age">
+              <label class="form-search__label form-search__label--adult" for="adult-ticket">Взрослые:</label>
+              <button class="btn btn--control btn--minus" type="button"></button>
+              <input class="form-search__number" id="adult-ticket" type="text" placeholder="2">
+              <button class="btn btn--control btn--plus" type="button"></button>
+            </div>
+            <div class="form-search__age">
+              <label class="form-search__label form-search__label--children" for="children-ticket">Дети:</label>
+              <button class="btn btn--control btn--minus" type="button"></button>
+              <input class="form-search__number" id="children-ticket" type="text" placeholder="0">
+              <button class="btn btn--control btn--plus" type="button"></button>
+            </div>
           </div>
+
           <button class="form-search__submit btn" type="submit">Найти</button>
         </form>
 
@@ -133,7 +154,9 @@
 
       <p class="page-footer__copyright">Website by
         <a class="page-footer__copylink" href="https://htmlacademy.ru/intensive/htmlcss">
-          <img class="page-footer__copylogo" src="../img/svg/logo-htmlacademy.svg" width="115" height="41" alt="Логотип HTML academy">
+          <svg class="page-footer__copylogo" xmlns="http://www.w3.org/2000/svg" width="115" height="41">
+            <path d="M44.6 26.9a2 2 0 0 0 .6-.1V28a3.3 3.3 0 0 1-1.2.2 1.7 1.7 0 0 1-1.7-1 4.8 4.8 0 0 1-3.1 1c-1.5 0-3-.8-3-2.5 0-2.1 2-2.8 3.8-2.8a11 11 0 0 1 2.1.3V23c0-1-.7-1.8-2.2-1.8a7.4 7.4 0 0 0-3 .7v-1.7a10.2 10.2 0 0 1 3.2-.6c2.4 0 3.8 1.1 3.8 3.7v3a.5.5 0 0 0 .5.5h.2zm-6.4-1.2a1.4 1.4 0 0 0 1.4 1.3h.1a3.4 3.4 0 0 0 2.4-1v-1.4a9.7 9.7 0 0 0-1.8-.3c-1 0-2.1.4-2.1 1.4zm12.3-6a5 5 0 0 1 2.6.6V22a4 4 0 0 0-2.3-.7 2.8 2.8 0 1 0 0 5.5 5 5 0 0 0 2.4-.7v1.7a6.3 6.3 0 0 1-2.7.6 4.2 4.2 0 0 1-4.5-4v-.3a4.3 4.3 0 0 1 4.2-4.5h.4zm12.2 7.2a2 2 0 0 0 .6-.1V28a3.3 3.3 0 0 1-1.2.2 1.7 1.7 0 0 1-1.7-1 4.8 4.8 0 0 1-3.1 1c-1.5 0-3-.8-3-2.5 0-2.1 2-2.8 3.8-2.8a11 11 0 0 1 2.1.3V23c0-1-.7-1.8-2.2-1.8a7.4 7.4 0 0 0-3 .7v-1.7a10.2 10.2 0 0 1 3.2-.6c2.4 0 3.8 1.1 3.8 3.7v3a.5.5 0 0 0 .5.5h.2zm-6.4-1.2a1.4 1.4 0 0 0 1.4 1.3h.1a3.4 3.4 0 0 0 2.4-1v-1.4a9.7 9.7 0 0 0-1.8-.3c-1 0-2.1.4-2.1 1.4zM73 16v12.2h-1.7v-1.3a3.9 3.9 0 0 1-3.1 1.5 4.4 4.4 0 0 1 0-8.8 3.8 3.8 0 0 1 3 1.3v-5H73zm-4.5 5.2a2.8 2.8 0 1 0 0 5.5 2.9 2.9 0 0 0 2.7-1.7v-2a3 3 0 0 0-2.7-1.8zM79 19.6c3.3 0 4.5 2.7 4 5.1h-6.3c.2 1.5 1.7 2.1 3.2 2.1a6.1 6.1 0 0 0 2.6-.6v1.6a7.1 7.1 0 0 1-3 .6c-2.5 0-4.7-1.4-4.7-4.4a4.2 4.2 0 0 1 4-4.4h.2zm0 1.6a2.3 2.3 0 0 0-2.3 2v.1h4.6a2 2 0 0 0-2.2-2.1zm5.8 7v-8.4h1.7v1a3.8 3.8 0 0 1 2.8-1.2 2.9 2.9 0 0 1 2.6 1.4 4.1 4.1 0 0 1 2.9-1.4A3 3 0 0 1 98 23v5.2h-1.9V23a1.6 1.6 0 0 0-1.4-1.7h-.3a2.8 2.8 0 0 0-2 1.1v5.8h-2V23a1.6 1.6 0 0 0-1.4-1.7h-.2a3 3 0 0 0-2.2 1.3v5.6h-1.7zm21.3-8.4h2l-4 9.5c-.9 2.2-2 2.8-3.3 2.8a4.8 4.8 0 0 1-1.1 0v-1.7a2.9 2.9 0 0 0 .8.2c1 0 1.6-.7 2-2l.3-.4-4-8.4h2l2.8 6.3zM38.7 1.4v4.8a3.8 3.8 0 0 1 2.7-1.1A3.3 3.3 0 0 1 45 8.5v5.1H43V8.7a1.8 1.8 0 0 0-1.6-2H41a3 3 0 0 0-2.3 1.4v5.5h-2V1.4h2zm11.2.9v3h3v1.6h-3v3.8c0 1.1.5 1.5 1.6 1.5a4.5 4.5 0 0 0 1.7-.4v1.6a6.8 6.8 0 0 1-2.2.4 2.5 2.5 0 0 1-2.9-2.8V7h-1.5V5.2H48V2.7zm5.4 11.3V5.3H57v1A3.8 3.8 0 0 1 59.8 5a2.9 2.9 0 0 1 2.6 1.3A4.1 4.1 0 0 1 65.3 5a3 3 0 0 1 3.1 3.4v5.2h-1.9V8.4a1.6 1.6 0 0 0-1.4-1.7H65a2.8 2.8 0 0 0-2 1.1v5.8h-2V8.4a1.6 1.6 0 0 0-1.4-1.7h-.2A3 3 0 0 0 57 8v5.6h-1.8zM71.2 1.4H73v12.2h-1.8V1.4zM14.7 0h-.1L0 1.5v26.7l14.6 8.6L29 28.2V1.5zm12.5 27l-12.6 7.6-12.7-7.5v-11l12.6 7.6V25l-8.6-5.1v1.3l8.6 5.2v1.4L6 22.6V24l8.6 5.2 8.8-5.3v-5.6l3.9-2.3V27zm0-12.5l-3.5 2-1.6 1-7.6-4.5v1.3l6.5 4h-.1l-1 .5-5.4-3.2V17l4.2 2.5-1 .7-3.2-2v1.4l2.1 1.2-2.1 1.3L2 14.6l12.5-7.5zm0-1.3L14.5 5.7 1.9 13.2v-10L14.6 2l12.6 1.3v10z"/>
+          </svg>
         </a>
       </p>
     </footer>
