поправил ссылку на catalog

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
           <li class="page-header__menu-item"><a class="page-header__menu-link" href="">Информация</a></li>
           <li class="page-header__menu-item"><a class="page-header__menu-link" href="">Фото и видео</a></li>
           <li class="page-header__menu-item"><a class="page-header__menu-link" href="">Карта штата</a></li>
-          <li class="page-header__menu-item"><a class="page-header__menu-link" href="/catalog.html">Гостиницы</a></li>
+          <li class="page-header__menu-item"><a class="page-header__menu-link" href="catalog.html">Гостиницы</a></li>
         </ul>
       </nav>
     </header>
