правки интерфейсных стрелок

--- a/catalog.html
+++ b/catalog.html
@@ -103,8 +103,16 @@
             </ul>
           </div>
           <p class="sorted-hotel__direction">
-            <a class="sorted-hotel__arrow sorted-hotel__arrow--up sorted-hotel__arrow--active" href="">сортировка по возрастанию</a> <!-- стрелочка вверх img/svg/icon-up-dir.svg -->
-            <a class="sorted-hotel__arrow sorted-hotel__arrow--down" href="">сортировка по убыванию</a> <!-- стрелочка вниз img/svg/icon-down-dir.svg -->
+            <a class="sorted-hotel__arrow sorted-hotel__arrow--up" href="">сортировка по возрастанию
+              <svg xmlns="http://www.w3.org/2000/svg" width="11" height="10">
+                <path d="M5.5 0L0 10h11z"/>
+              </svg>
+            </a>
+            <a class="sorted-hotel__arrow sorted-hotel__arrow--down sorted-hotel__arrow--active" href="">сортировка по убыванию
+              <svg xmlns="http://www.w3.org/2000/svg" width="11" height="10">
+                <path d="M5.5 10L0 0h11"/>
+              </svg>
+            </a>
           </p>
         </div>
 
