--- a/catalog.html
+++ b/catalog.html
@@ -41,7 +41,7 @@
                 <input class="form-filter__check visually-hidden" type="checkbox" name="filter-parking" id="filter-parking">
                 <label class="form-filter__label" for="filter-parking">Парковка</label>
               </li>
-              <p class="form-filter__row">
+              <li class="form-filter__row">
                 <input class="form-filter__check visually-hidden" type="checkbox" name="filter-wifi" id="filter-wifi">
                 <label class="form-filter__label" for="filter-wifi">WI-FI</label>
               </li>
