--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>HTML Academy: Седона</title>
 
-    <link href="https://fonts.googleapis.com/css?family=PT+Sans:400,700&display=swap&subset=cyrillic" rel="stylesheet">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=PT+Sans:400,700&display=swap&subset=cyrillic">
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/style.css">
   </head>
@@ -124,15 +124,23 @@
           <div class="form-search__row">
             <div class="form-search__age">
               <label class="form-search__label form-search__label--adult" for="adult-ticket">Взрослые:</label>
-              <button class="btn btn--control btn--minus" type="button"></button>
+              <button class="btn btn--control btn--minus" type="button">
+                <span class="visually-hidden">уменьшить</span>
+              </button>
               <input class="form-search__number" id="adult-ticket" type="text" placeholder="2">
-              <button class="btn btn--control btn--plus" type="button"></button>
+              <button class="btn btn--control btn--plus" type="button">
+                <span class="visually-hidden">увеличить</span>
+              </button>
             </div>
             <div class="form-search__age">
               <label class="form-search__label form-search__label--children" for="children-ticket">Дети:</label>
-              <button class="btn btn--control btn--minus" type="button"></button>
+              <button class="btn btn--control btn--minus" type="button">
+                <span class="visually-hidden">уменьшить</span>
+              </button>
               <input class="form-search__number" id="children-ticket" type="text" placeholder="0">
-              <button class="btn btn--control btn--plus" type="button"></button>
+              <button class="btn btn--control btn--plus" type="button">
+                <span class="visually-hidden">увеличить</span>
+              </button>
             </div>
           </div>
 
