--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 
       <section class="search-hotel">
         <h2 class="search-hotel__header">Заинтересовались?</h2>
-        <p class="search-hotel__text">Укажите предполагаемые даты поездки, и&nbsp;мы&nbsp;покажем&nbsp;вам&nbsp;лучшие предложения гостиниц в Седоне</p>
+        <p class="search-hotel__text">Укажите предполагаемые даты поездки,<br>и мы покажем вам лучшие предложения гостиниц в Седоне</p>
 
         <!-- в форме используется изображение календаря img/svg/calendar.svg -->
         <button class="form-search-show btn" type="button">Поиск гостиницы в Седоне</button>
