--- a/catalog.html
+++ b/catalog.html
@@ -11,13 +11,13 @@
   <body>
     <header class="page-header page-header--catalog">
       <a class="page-header__logo-link" href="index.html">
-        <img class="page-header__logo" src="img/svg/logo-sedona.svg" width="140" height="71" alt="Логотип Седона"> <!-- логотип Седона img/svg/logo-sedona.svg -->
+        <img class="page-header__logo" src="img/svg/logo-sedona.svg" width="140" height="71" alt="Логотип Седона">
       </a>
       <nav class="page-header__nav">
         <ul class="page-header__menu-list">
-          <li class="page-header__menu-item"><a class="page-header__menu-link" href="">Информация</a></li>
-          <li class="page-header__menu-item"><a class="page-header__menu-link" href="">Фото и видео</a></li>
-          <li class="page-header__menu-item"><a class="page-header__menu-link" href="">Карта штата</a></li>
+          <li class="page-header__menu-item"><a class="page-header__menu-link" href="#">Информация</a></li>
+          <li class="page-header__menu-item"><a class="page-header__menu-link" href="#">Фото и видео</a></li>
+          <li class="page-header__menu-item"><a class="page-header__menu-link" href="#">Карта штата</a></li>
           <li class="page-header__menu-item"><a class="page-header__menu-link page-header__menu-link--current">Гостиницы</a></li>
         </ul>
       </nav>
@@ -70,7 +70,6 @@
             <fieldset class="form-filter__set form-filter__set--range">
               <legend class="form-filter__legend form-filter__legend--range" tabindex="0">Стоимость в сутки (Р):</legend>
 
-              <!-- кастомный ползунок с цифрами -->
               <div class="price-controls">
                 <label class="min-price">от <input type="text" name="min-price" value="0"></label>
                 <label class="max-price">до <input type="text" name="max-price" value="3000"></label>
@@ -98,17 +97,17 @@
           <ul class="sorted-hotel__list">
             <li class="sorted-hotel__sorting">Сортировка:</li>
             <li class="sorted-hotel__item"><a class="sorted-hotel__type-sort sorted-hotel__type-sort--active" aria-label="сортировка по цене">по цене</a></li>
-            <li class="sorted-hotel__item"><a class="sorted-hotel__type-sort" href="" aria-label="сортировка оп типу">по типу</a></li>
-            <li class="sorted-hotel__item"><a class="sorted-hotel__type-sort" href="" aria-label="сортировка по рейтингу">по рейтингу</a></li>
+            <li class="sorted-hotel__item"><a class="sorted-hotel__type-sort" href="#" aria-label="сортировка оп типу">по типу</a></li>
+            <li class="sorted-hotel__item"><a class="sorted-hotel__type-sort" href="#" aria-label="сортировка по рейтингу">по рейтингу</a></li>
           </ul>
 
           <div class="sorted-hotel__direction">
-            <a class="sorted-hotel__arrow sorted-hotel__arrow--up" href="">сортировка по возрастанию
+            <a class="sorted-hotel__arrow sorted-hotel__arrow--up" href="#">сортировка по возрастанию
               <svg xmlns="http://www.w3.org/2000/svg" width="11" height="10">
                 <path d="M5.5 0L0 10h11z"/>
               </svg>
             </a>
-            <a class="sorted-hotel__arrow sorted-hotel__arrow--down sorted-hotel__arrow--active" href="">сортировка по убыванию
+            <a class="sorted-hotel__arrow sorted-hotel__arrow--down sorted-hotel__arrow--active" href="#">сортировка по убыванию
               <svg xmlns="http://www.w3.org/2000/svg" width="11" height="10">
                 <path d="M5.5 10L0 0h11"/>
               </svg>
@@ -118,15 +117,15 @@
 
         <article class="sorted-hotel__article">
           <div class="sorted-hotel__content">
-            <h3 class="sorted-hotel__header"><a class="sorted-hotel__link" href="">Amara Resort & Spa</a></h3>
+            <h3 class="sorted-hotel__header"><a class="sorted-hotel__link" href="#">Amara Resort & Spa</a></h3>
             <div class="container__flex-row">
               <div class="sorted-hotel__description" tabindex="0" aria-label="Гостиница от 4000 рублей">
                 <p class="sorted-hotel__option sorted-hotel__option--type">Гостиница</p>
-                <a class="sorted-hotel__btn sorted-hotel__btn--details" href="">Подробнее</a>
+                <a class="sorted-hotel__btn sorted-hotel__btn--details" href="#">Подробнее</a>
               </div>
               <div class="sorted-hotel__booking">
                 <p class="sorted-hotel__option sorted-hotel__option--price">от 4000 Р.</p>
-                <a class="sorted-hotel__btn sorted-hotel__btn--book" href="">Забронировать</a>
+                <a class="sorted-hotel__btn sorted-hotel__btn--book" href="#">Забронировать</a>
               </div>
             </div>
           </div>
@@ -134,22 +133,22 @@
           <img class="sorted-hotel__foto" src="img/hotel-1.jpg" width="135" height="90" alt="Фото гостиницы Amara Resort & Spa">
 
           <div class="sorted-hotel__rating">
-            <span class="sorted-hotel__star sorted-hotel__star--four">4 звёзды</span> <!-- звёздочки рейтинга img/svg/star.svg -->
+            <span class="sorted-hotel__star sorted-hotel__star--four">4 звёзды</span>
             <p class="sorted-hotel__text">Рейтинг: 8,5</p>
           </div>
         </article>
 
         <article class="sorted-hotel__article">
           <div class="sorted-hotel__content">
-            <h3 class="sorted-hotel__header"><a class="sorted-hotel__link" href="">Desert Quail Inn</a></h3>
+            <h3 class="sorted-hotel__header"><a class="sorted-hotel__link" href="#">Desert Quail Inn</a></h3>
             <div class="container__flex-row">
               <div class="sorted-hotel__description" tabindex="0" aria-label="Гостиница от 4000 рублей">
                 <p class="sorted-hotel__option sorted-hotel__option--type">Мотель</p>
-                <a class="sorted-hotel__btn sorted-hotel__btn--details" href="">Подробнее</a>
+                <a class="sorted-hotel__btn sorted-hotel__btn--details" href="#">Подробнее</a>
               </div>
               <div class="sorted-hotel__booking">
                 <p class="sorted-hotel__option sorted-hotel__option--price">от 3000 Р.</p>
-                <a class="sorted-hotel__btn sorted-hotel__btn--book" href="">Забронировать</a>
+                <a class="sorted-hotel__btn sorted-hotel__btn--book" href="#">Забронировать</a>
               </div>
             </div>
           </div>
@@ -157,22 +156,22 @@
           <img class="sorted-hotel__foto" src="img/hotel-2.jpg" width="135" height="90" alt="Фото гостиницы Amara Resort & Spa">
 
           <div class="sorted-hotel__rating">
-            <span class="sorted-hotel__star sorted-hotel__star--three">3 звёзды</span> <!-- звёздочки рейтинга img/svg/star.svg -->
+            <span class="sorted-hotel__star sorted-hotel__star--three">3 звёзды</span>
             <p class="sorted-hotel__text">Рейтинг: 8,9</p>
           </div>
         </article>
 
         <article class="sorted-hotel__article">
           <div class="sorted-hotel__content">
-            <h3 class="sorted-hotel__header"><a class="sorted-hotel__link" href="">Villas at Poco Diablo</a></h3>
+            <h3 class="sorted-hotel__header"><a class="sorted-hotel__link" href="#">Villas at Poco Diablo</a></h3>
             <div class="container__flex-row">
               <div class="sorted-hotel__description" tabindex="0" aria-label="Гостиница от 4000 рублей">
                 <p class="sorted-hotel__option sorted-hotel__option--type">Апартаменты</p>
-                <a class="sorted-hotel__btn sorted-hotel__btn--details" href="">Подробнее</a>
+                <a class="sorted-hotel__btn sorted-hotel__btn--details" href="#">Подробнее</a>
               </div>
               <div class="sorted-hotel__booking">
                 <p class="sorted-hotel__option sorted-hotel__option--price">от 2000 Р.</p>
-                <a class="sorted-hotel__btn sorted-hotel__btn--book" href="">Забронировать</a>
+                <a class="sorted-hotel__btn sorted-hotel__btn--book" href="#">Забронировать</a>
               </div>
             </div>
           </div>
@@ -180,7 +179,7 @@
           <img class="sorted-hotel__foto" src="img/hotel-3.jpg" width="135" height="90" alt="Фото гостиницы Amara Resort & Spa">
 
           <div class="sorted-hotel__rating">
-            <span class="sorted-hotel__star sorted-hotel__star--two">2 звёзды</span> <!-- звёздочки рейтинга img/svg/star.svg -->
+            <span class="sorted-hotel__star sorted-hotel__star--two">2 звёзды</span>
             <p class="sorted-hotel__text">Рейтинг: 9,2</p>
           </div>
         </article>
@@ -191,9 +190,9 @@
       <div class="page-footer__social-hashtag">#visitSEDONA</div>
 
       <ul class="page-footer__social-list">
-        <li class="page-footer__social-item"><a class="page-footer__social-link page-footer__social-link--tw" href="" aria-label="Седона в твитере">Твитер</a></li> <!-- иконка img/svg/twitter.svg -->
-        <li class="page-footer__social-item"><a class="page-footer__social-link page-footer__social-link--fb" href="" aria-label="Седона на фейсбуке">Фэйсбук</a></li> <!-- иконка img/svg/fb-icon.svg -->
-        <li class="page-footer__social-item"><a class="page-footer__social-link page-footer__social-link--youtube" href="" aria-label="Седона на ютубе">Ютуб</a></li> <!-- иконка img/svg/youtube.svg -->
+        <li class="page-footer__social-item"><a class="page-footer__social-link page-footer__social-link--tw" href="#" aria-label="Седона в твитере">Твитер</a></li>
+        <li class="page-footer__social-item"><a class="page-footer__social-link page-footer__social-link--fb" href="#" aria-label="Седона на фейсбуке">Фэйсбук</a></li>
+        <li class="page-footer__social-item"><a class="page-footer__social-link page-footer__social-link--youtube" href="#" aria-label="Седона на ютубе">Ютуб</a></li>
       </ul>
 
       <div class="page-footer__copyright">
