--- a/catalog.html
+++ b/catalog.html
@@ -102,16 +102,8 @@
           </ul>
 
           <div class="sorted-hotel__direction">
-            <a class="sorted-hotel__arrow sorted-hotel__arrow--up" href="#">сортировка по возрастанию
-              <svg xmlns="http://www.w3.org/2000/svg" width="11" height="10">
-                <path d="M5.5 0L0 10h11z"/>
-              </svg>
-            </a>
-            <a class="sorted-hotel__arrow sorted-hotel__arrow--down sorted-hotel__arrow--active" href="#">сортировка по убыванию
-              <svg xmlns="http://www.w3.org/2000/svg" width="11" height="10">
-                <path d="M5.5 10L0 0h11"/>
-              </svg>
-            </a>
+            <a class="sorted-hotel__arrow sorted-hotel__arrow--up" href="#">сортировка по возрастанию</a>
+            <a class="sorted-hotel__arrow sorted-hotel__arrow--down sorted-hotel__arrow--active" href="#">сортировка по убыванию</a>
           </div>
         </div>
 
