--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
         <p class="search-hotel__text">Укажите предполагаемые даты поездки,<br>и мы покажем вам лучшие предложения гостиниц в Седоне</p>
 
         <button class="form-search-show btn" type="button">Поиск гостиницы в Седоне</button>
-        <form class="form-search" action="https://echo.htmlacademy.ru/" method="GET">
+        <form class="form-search form-search--show" action="https://echo.htmlacademy.ru/" method="GET">
           <div class="form-search__row">
             <label class="form-search__label" for="date-arrival">Дата заезда:</label>
             <input class="form-search__text" id="date-arrival" type="text" placeholder="24 апреля 2017">
@@ -138,8 +138,8 @@
           <button class="form-search__submit btn" type="submit">Найти</button>
         </form>
 
-        <div class="search-hotel__map" id="map">
-
+        <div class="search-hotel__map">
+          <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d498028.36253111163!2d-111.6704653920826!3d34.912473126420636!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sru!2sru!4v1569772122513!5m2!1sru!2sru" width="100%" height="593" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
         </div>
       </section>
     </main>
@@ -162,7 +162,6 @@
       </p>
     </footer>
 
-    <script src="https://maps.googleapis.com/maps/api/js?libraries=places&amp;key=AIzaSyDluwBfvy_M346vmyhvVLD62kK76nnVtss"></script>
     <script src="js/search-hotel.js"></script>
   </body>
 </html>
