правки по критериям

--- a/catalog.html
+++ b/catalog.html
@@ -78,8 +78,12 @@
                 <div class="scale">
                   <div class="bar"></div>
                 </div>
-                <div class="range-toggle range-toggle-min"></div>
-                <div class="range-toggle range-toggle-max"></div>
+                <div class="range-toggle range-toggle-min" tabindex="0">
+                  <span class="visually-hidden">ползунок, минимальная цена</span>
+                </div>
+                <div class="range-toggle range-toggle-max" tabindex="0">
+                  <span class="visually-hidden">ползунок, максимальная цена</span>
+                </div>
               </div>
             </fieldset>
 
